--- a/css/navigation.css
+++ b/css/navigation.css
@@ -10,8 +10,6 @@
     height: 5vh;  
     width: 100vw;
     font-size: 2.5vh;
-    background-color: black;
-    z-index: 1;
 }
 
 #nav_placeholder{
@@ -56,15 +54,13 @@ li a:hover{
     right: 1vw;
 }
 
-label[for=autocompleteSearch]{
-    font-size:3vh;
-    font-family:'Oswald', sans-serif;
-}
-
 
 @media only screen and (max-width: 768px) {
     #navDiv{
         height: auto;
+        flex-direction: column;
+        background-color: black;
+        padding-top: 8vh;
     }
 
     #nav_placeholder{
@@ -94,39 +90,34 @@ label[for=autocompleteSearch]{
        background-color:darkgrey;
     }
 
-    #navDiv{
-        flex-direction: column;
+    #btnDiv{
+        width: 100vw;
+        display:flex;
+        justify-content:flex-start;
+        align-items:center;
+        height: 8vh;
         background-color: black;
-        padding-top: 7vh;
+        position:fixed;
+        z-index: 2;
     }
 
     #closeTogg{
         display: block;
-        height: 7vh;
+        height: 8vh;
         width: 15vw;
-        font-family:Verdana, Geneva, Tahoma, sans-serif;
         font-weight: 900;
         border:none;
         outline: none;
         background-color: darkorange;
         color: white;
-        text-shadow: 0 0 1vw whitesmoke;
         cursor: pointer;
-        font-size: 1.85vh;
+        font-size: 8vw;
         position: fixed;
         z-index: 2;
     }
 
-    #btnDiv{
-        width: 100vw;
-        display:flex;
-        justify-content:flex-end;
-        align-items:center;
-        width:100%;
-        height: 7vh;
-        background-color: black;
-        position:fixed;
-        z-index: 2;
+    #closeTogg:hover{
+        background-color: magenta;
     }
 
     #rightNavUl{
@@ -136,9 +127,11 @@ label[for=autocompleteSearch]{
 
 @media only screen and (min-width: 769px) and (max-width: 1200px){
     #navDiv{
-        width: 10vw;
-        height: 100vh;
-        background-color: black;
+        width: 100vw;
+        height: 10vh;
+        display: block;
+        position: fixed;
+        top: 0;
     }
 
     #logoAlgebra{
@@ -146,29 +139,28 @@ label[for=autocompleteSearch]{
     }
 
     #leftNavUl{
-        flex-direction: column;
+        flex-direction: row;
         margin: 0;
         height: auto;
-        width: 10vw;
+        width: 100vw;
         position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%)
+        left: 20vw;
     }
 
     #nav_placeholder{
         flex-direction: column;
-        height: 100vh;
     }
 
     #leftNavUl li{
-        font-size: 7vw;
+        font-size: 1vw;
         margin-left: 2vw;
         margin-top: 2vh;
+        visibility: hidden;
     }
 
-    #leftNavUl li .linkClass{
-        display: none;
+    #leftNavUl li a i{
+        font-size: 5vw;
+        visibility: visible;
     }
 
     #rightNavUl{
