--- a/css/rightBar.css
+++ b/css/rightBar.css
@@ -27,91 +27,47 @@
 
 @media only screen and (max-width: 768px) {
     #mobileRightBar{
+        width: 80vw;
+        height: 8vh;
         display: block;
         position: fixed;
-        z-index: 1;
-        height: 10vh;  
-        width: 100vw;
-        padding-top: 0.75vh;
-        background-color: black;
-        bottom: 0;
+        top: 0;
+        right: 0;
+        z-index: 3;
     }
 
     #wrapper{
-        display:flex;
-        align-items:center;
-        height: 10vh;  
-        width: 100vw;
-    }
-
-    #wrapper ul{
-        list-style: none;
-        display:flex;
-        width: auto;
+        flex-direction: row;
+        margin: 0;
+        right: 1vw;
+        height: 8vh;
         position: absolute;
-        top: 50%;
-        left: 50%;
-        margin-right: -50%;
-        transform: translate(-50%, -50%)
-    }
-    
-    #wrapper ul li{
-        font-size: 6vh;
-        margin: 4vw;
-        padding-bottom: 1vw;
-    }
-
-    #wrapper ul li a{
-        color: magenta;
-    }
-    
-    #wrapper ul li a:hover{
-        color: white;
+        font-size: 8vw;
+        z-index: 2;
     }
 }
 
 
 @media only screen and (min-width: 768px) and (max-width: 1200px){
     #mobileRightBar{
+        width: 10vw;
+        height: 100vh;
         display: block;
         position: fixed;
-        z-index: 1;
-        height: 8vh;  
-        width: 100vw;
-        padding-top: 0.75vh;
-        background-color: black;
         top: 0;
+        background-color: black;
     }
 
     #wrapper{
-        display:flex;
-        align-items:center;
-        height: 10vh;  
-        width: 100vw;
-    }
-
-    #wrapper ul{
-        list-style: none;
-        display:flex;
-        width: auto;
-        position: absolute;
+        flex-direction: column;
+        margin: 0;
+        padding-left: 50%;
+        height: auto;
+        width: 10vw;
+        position: relative;
         top: 50%;
         left: 50%;
-        margin-right: -50%;
-        transform: translate(-50%, -50%)
-    }
-    
-    #wrapper ul li{
-        font-size: 6vh;
-        margin: 4vw;
-        padding-bottom: 1vw;
-    }
-
-    #wrapper ul li a{
-        color: magenta;
-    }
-
-    #wrapper ul li a:hover{
-        color: white;
+        transform: translate(-50%, -50%);
+        font-size: 5vw;
     }
 }
