--- a/css/footer.css
+++ b/css/footer.css
@@ -23,21 +23,18 @@
 #footer div:nth-of-type(1) p{
     font-size: 2.75vw;
     color: white;
-    text-shadow: 0 0 2vw black;
-    font-family: 'Roboto', sans-serif;
 }
 
 #footer div:nth-of-type(2) p{
     font-size: 2.75vw;
+    font-weight: 900;
     color: magenta;
     text-shadow: 0 0 2vw white;
-    font-family: 'Roboto', sans-serif;
     padding-top: 2vw;
 }
 
 
 @media only screen and (max-width: 768px) {
-
     #footer{
     height: 40vh;
     width: 100vw;
