--- a/css/form.css
+++ b/css/form.css
@@ -3,24 +3,21 @@
 }
 
 .ui-dialog-titlebar{
-    font-family:'Oswald', sans-serif;
-    color: aqua;
+    color: magenta;
     font-size: 20px;
 }
 
 label[for=name], label[for=email], label[for=importance], label[for=message]{
-    font-family:'Oswald', sans-serif;
     font-size: 17px;
 }
 
 label[for=newsletter]{
     display: inline;
-    font-family:'Oswald', sans-serif;
     font-size: 17px;
 }
 
 #name, #email{
-    border: 1px solid aqua;
+    border: 1px solid magenta;
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -28,7 +25,7 @@ label[for=newsletter]{
 }
 
 textarea{
-    border: 1px solid aqua;
+    border: 1px solid magenta;
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
