--- a/css/index.css
+++ b/css/index.css
@@ -1,73 +1,56 @@
 body{
-    background-color: black;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: #333;
 }
 
-#myVideo{
-    width: 100vw;
-    top:50%;
-    left:50%;
-}
-
-#background{
-    display: none;
-}
-
+#background,
 #foot_placeholder{
     display: none;
 }
 
-#container{
-	text-align: center;
+#myVideoDiv{
+    position: relative;
+    text-align: center;
 }
 
-#text1{
-	display: inline-block;
-	vertical-align: middle;
-	color: whitesmoke;
-    font-family: 'Oswald', sans-serif;
-	letter-spacing: 2px;
-    font-size: 5vw;
-    text-shadow: 0 0  1vw black;
+#myVideo{
+    width: 100vw;
+    top: 50%;
+    left: 50%;
 }
 
-#text2{
-    display: inline-block;
-	vertical-align: middle;
-	color: whitesmoke;
-    font-family: 'Oswald', sans-serif;
-	letter-spacing: 2px;
-    font-size: 5vw;
-    text-shadow: 0 0  1vw black;
-    margin-left: 1vw;
-}
-
-#text3{
-    display: inline-block;
-	vertical-align: middle;
-	color: red;
-    font-family: 'Oswald', sans-serif;
-	letter-spacing: 2px;
-    font-size: 5vw;
-    text-shadow: 0 0  1vw darkred;
-    margin-left: 1vw;
-}
-
-#cursor1, #cursor2{
-	display: inline-block;
-	vertical-align: middle;
-	width: 1vw;
-	height: 7vh;
-	background-color: whitesmoke;
-	animation: blink .75s step-end infinite;
-}
-
-#anim,#anim2{
+#anim,
+#anim2{
     width: 60vw;
 }
 
-#rightNavUl{
-    visibility: hidden;
+#text1,
+#text2,
+#text3{
+	display: inline-block;
+	letter-spacing: 2px;
+    font-size: 5vw;
+}
+
+#text1,
+#text2{
+	color: whitesmoke;
+    text-shadow: 0 0  1vw black;
+}
+
+#text3{
+	color: red;
+    font-weight: 900;
+    text-shadow: 0 0  1vw darkred;
+}
+
+#cursor1, 
+#cursor2{
+	display: inline-block;
+	width: 1vw;
+	height: 8vh;
+	background-color: whitesmoke;
+	animation: blink .75s step-end infinite;
 }
 
 @keyframes blink {
@@ -80,54 +63,41 @@ body{
 }
 
 
-@media only screen and (max-width: 768px) {
-    #navDiv{
-        display: none;
-    }
-    #background{
-        display: flex;
-        flex-direction: column;
-        padding-top: 50%;
-        padding-bottom: 50%;
-    }
-
-    #background img{
-        width: 100vw;
-        height: auto;
-    }
-
-    #myVideo{
-        display:none;
-    }
-    
-    #foot_placeholder{
-        display:block;
-        position:fixed;
-        bottom: 0;
-        height: 40vh;
-        width: 100vw;
-        padding-top: 15vh;
-    }
-
-    #anim,#anim1{
-        display: none;
-    }
-
-    #rightNavUl{
-        visibility: hidden;
-    }
-}
-
 @media only screen and (min-width: 769px) and (max-width: 1200px) {
-    body {
+    body{
         background-color: black;
     }
 
     #myVideo {
         height: 100vh;
     }
+}
 
-    #rightNavUl {
-        visibility: hidden;
+
+@media only screen and (max-width: 768px) {
+    #navDiv,
+    #myVideoDiv,
+    #anim,
+    #anim1{
+        display: none;
+    }
+    
+    #background{
+        display: flex;
+        flex-direction: column;
+        padding-top: 8vh;
+    }
+
+    #background img{
+        width: 100vw;
+        height: 100%;
+        object-fit: fill;
+    }
+
+    #foot_placeholder{
+        display:block;
+        position:fixed;
+        bottom: 0;
+        width: 100vw;
     }
 }
