--- a/css/news.css
+++ b/css/news.css
@@ -1,53 +1,13 @@
-/* ima i u curriculum.css */
-#mainDiv{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    animation: flyingUp 1s ease forwards;
-    position:relative;
-    transform:translateY(34%);
-    -webkit-transform: translateY(34%);
-    height: 13vw;
-}
-
-/* ima i u curriculum.css */
-@keyframes flyingUp {
-    to {
-        transform: translateY(0%);
-        -webkit-transform: translateY(0%);
-    }
-}
-
-/* ima i u curriculum.css */
-#mainDiv h1 {
-    text-align: center;
-    font-family: 'Oswald', sans-serif;
-    font-size: 2.75vw;
-    border-bottom: darkorange 0.15vw solid;
-    padding: 1.5vw;
-    width: 39vw;
-}
-
 #picsDiv {
     display: grid;
     grid-template-rows: auto;
     grid-template-columns: 33vw 33vw 33vw;
     justify-content: center;
     width: 100vw;
-    background-color: whitesmoke; 
-}
-
-@keyframes appear {
-    to {
-        opacity: 1;
-        transform: scale(1);
-        filter: blur(0);
-    }
 }
 
 #picsDiv div{
-    width: 32vw;
+    width: auto;
     height: 75vh;
     overflow: hidden;
     position: relative;
@@ -56,6 +16,14 @@
     opacity:0;
     transform:scale(0);
     filter:blur(4px);
+}
+
+@keyframes appear {
+    to {
+        opacity: 1;
+        transform: scale(1);
+        filter: blur(0);
+    }
 }
 
 #picsDiv div img{
@@ -72,7 +40,7 @@ h2{
     font-size: 1.5vw;
     position: absolute;
     top: 10%;
-    left: 40%;
+    left: 43%;
     color:yellow;
     text-align: center;
 }
@@ -81,7 +49,7 @@ h3{
     font-size: 1vw;
     position: absolute;
     top: 40%;
-    left: 52%;
+    left: 55%;
     transform: translate(-50%, -50%);
     color: white;
     text-align: center;
@@ -91,76 +59,8 @@ h3{
     font-size: 1.35vw; 
 }
 
-#rightNavUl{
-    visibility: hidden;
-}
-
-
-@media only screen and (max-width: 768px) {
-    #mainDiv{
-        padding-top: 10vh;
-    }
-
-    #mainDiv h1{
-        font-size: 3vh;
-    }
-
-    #picsDiv
-    {
-        display: flex;
-        flex-direction: column;
-        position: absolute;
-        top:20vh;
-    }
-
-    #picsDiv div{
-        width: auto;
-    }
-
-    .pic{
-        display: block;
-        height: auto;
-        width: 80%;
-    }
-
-    h2{
-        font-size: 3vh;
-        top: 10%;
-        left: 33%;
-    }
-
-    h3{
-        font-size: 2vh;
-        top: 45%;
-        left: 45%;
-    }
-
-    #picsDiv div:hover h2,#picsDiv div:hover h3{
-        font-size: 2.5vh; 
-    }
-    
-
-    #foot_placeholder{
-        display: none;
-    }
-
-    #rightNavUl{
-        visibility: hidden;
-    }
-    
-}
 
 @media only screen and (min-width: 769px) and (max-width: 1200px){
-    #mainDiv{
-        display: block;
-        padding-top: 10vh;
-    }
-
-    #mainDiv h1{
-        margin-right: auto;
-        margin-left: auto;
-    }
-
     #picsDiv
     {
         display: grid;
@@ -193,13 +93,50 @@ h3{
     #picsDiv div:hover h2,#picsDiv div:hover h3{
         font-size: 4vh; 
     }
+}
 
 
-    #foot_placeholder{
-        display: none;
+@media only screen and (max-width: 768px) {
+    #mainDiv{
+        padding-top: 8vh;
     }
-    
-    #rightNavUl{
-        visibility: hidden;
+
+    #mainDiv h1{
+        font-size: 4vh;
+    }
+
+    #picsDiv
+    {
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        top: 20vh;
+        padding-left: 5%;
+    }
+
+    #picsDiv div{
+        width: auto;
+    }
+
+    .pic{
+        display: block;
+        height: auto;
+        width: 80%;
+    }
+
+    h2{
+        font-size: 4vh;
+        top: 10%;
+        left: 33%;
+    }
+
+    h3{
+        font-size: 3vh;
+        top: 45%;
+        left: 45%;
+    }
+
+    #picsDiv div:hover h2,#picsDiv div:hover h3{
+        font-size: 3.5vh; 
     }
 }
