--- a/css/specificNews.css
+++ b/css/specificNews.css
@@ -21,11 +21,9 @@
 }
 
 #topNewsDiv p{
-    font-family: 'Oswald', sans-serif;
     font-size: 3vw;
     width: 45vw;
     text-align: center;
-    text-shadow: 0 0 1vw black;
     color:white;
     position: absolute;
     top: 50%;
@@ -35,37 +33,6 @@
 
 #topNews{
     width: 100vw;
-}
-
-/* postoji u news.css */
-#mainDiv{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    animation: flyingUp 1s ease forwards;
-    position:relative;
-    transform:translateY(34%);
-    -webkit-transform: translateY(34%);
-    height: 13vw;
-}
-
-/* postoji u news.css */
-@keyframes flyingUp {
-    to {
-        transform: translateY(0%);
-        -webkit-transform: translateY(0%);
-    }
-}
-
-/* postoji u news.css */
-#mainDiv h1{
-    text-align: center;
-    font-family: 'Oswald', sans-serif;
-    font-size: 2.75vw;
-    border-bottom:darkorange 0.15vw solid;
-    padding: 1.5vw;
-    width: 39vw;
 }
 
 .textDiv{    
@@ -79,24 +46,31 @@
 
 .textDiv p{
     width:67vw;
-    font-family: 'Oswald', sans-serif;
     padding-top: 2.5vw;
     font-size: 1.4vw;
 }
 
-#rightNavUl{
-    visibility: hidden;
+#galDiv a{
+    overflow: hidden;
+}
+
+#galDiv a img{
+    -webkit-transition: all .2s ease;
+    -moz-transition: all .2s ease;
+    -ms-transition: all .2s ease;
+    -o-transition: all .2s ease;
+    transition: all .2s ease;
+}
+
+#galDiv a img:hover{
+    -webkit-transform:scale(1.5); /* Safari and Chrome */
+    -moz-transform:scale(1.5); /* Firefox */
+    -ms-transform:scale(1.5); /* IE 9 */
+    -o-transform:scale(1.5); /* Opera */
+    transform:scale(1.5);
 }
 
 @media only screen and (min-width: 769px) and (max-width: 1200px){
-    #foot_placeholder{
-        display: none;
-    }
-
-    #rightNavUl{
-        visibility: hidden;
-    }
-
     #topNewsDiv{
         padding-top: 10vh;
         animation: none;
@@ -128,35 +102,16 @@
 }
 
  @media only screen and (max-width: 768px) {
-    #foot_placeholder{
+    #topNewsDiv{
         display: none;
     }
 
-    #rightNavUl{
-        visibility: hidden;
-    }
-
-    #topNewsDiv{
-        display:none;
-    }
-
-    #mainDiv{
-        animation: none;
-        height: auto;
-        padding-top: 7vh;
-    }
-
-    #mainDiv h1{
-       font-size: 5vh;
-       width:90vw;
-    }
-
     .textDiv{
-        margin-top: 5vh;
+        padding-top: 10vh;
     }
 
     .textDiv p{
         width: 85vw;
-        font-size: 4vh;
+        font-size: 2.5vh;
     }
 }
